// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.autoops;
option go_package = "github.com/bucketeer-io/bucketeer/proto/autoops";

message FlagTrigger {
  enum TiggerType { Webhook = 0; }
  enum TriggerAction {
    On = 0;
    Off = 1;
  }
  string id = 1;
  string feature_id = 2;
  string environment_namespace = 3;
  string name = 4;
  TiggerType type = 5;
  TriggerAction action = 6;
  string description = 7;
  int32 trigger_times = 8;
  int64 last_triggered_at = 9;
  string uuid = 10;
  bool disabled = 11;
  bool deleted = 12;
  int64 created_at = 13;
  int64 updated_at = 14;
}